# telseq-parallel

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  TESTING.md
.github/workflows/: release.yml
benchmarks/: README.md  plot_wall_time.py
benchmarks/real-wgs-2026-07-21/: README.md  summary.tsv
benchmarks/real-wgs-2026-07-22-htslib/: README.md  summary.tsv
benchmarks/real-wgs-2026-07-22-v0.3-windows/: README.md  summary.tsv
scripts/: compare_and_benchmark.sh  compare_and_benchmark_docker.sh  compare_telseq_output.sh  test_parallel_scaling.sh  test_parallel_synthetic.sh
src/: Makefile.am  config.h  configure.ac
src/Telseq/: telseq.cpp  telseq.h
src/Test/: Makefile.am  generate_parallel_fixture.cpp
